add html and css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=raleway:400" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>Demaux Yann</h1>
-    <blink><h2>On est Ultra !!!</h2></blink>
+    <div class="container">
+        <header class="header">
+            <h1 class="main-title">Demaux Yann</h1>
+            <div>
+                <p class="nth-title">étudiant développeur web</p>
+            </div>
+        </header>
+        <main class="main">
+            <div class="profil">
+                <h2 class="sub-title">Profil</h2>
+                <p class="paragraphe">En cours de reconversion professionnelle et désireux de développer constamment mes
+                    compétences et mon savoir afin d'assurer mon évolution professionnelle et personnelle.
+                    <br>Je suis confiant dans ma capacité à proposer des idées intéressantes.
+                </p>
+            </div>
+            <h2 class="sub-title">Présentation</h2>
+            <p class="paragraphe">Actuellement en cours de reconversion professionnelle, j’ai pour projet de m’orienter
+                dans le secteur du développement web.<br>
+                J’ai travaillé pendant trois ans dans le domaine de la maintenance industrielle. Au cours de mon
+                expérience, j’ai eu l’occasion à plusieurs reprises de gérer un chantier, de travailler en équipe ainsi
+                qu'en complète autonomie. Ces opportunités m’ont permis de développer des compétences organisationnelles
+                et d’adaptabilité, essentielles dans le métier auquel je souhaite me destiner.<br></p>
+            <p class="paragraphe">
+                Afin de mettre un maximum de chances de mon côté, j’ai pris le temps d’échanger avec des professionnels
+                et j’ai commencé à me former de façon indépendante sur différents langages informatiques (HTML, CSS,
+                Javascript, Git).<br>J’ai également intégré une société (Lectra à Bordeaux) pour un stage d’une durée de
+                deux semaines. Cette intégration en milieu professionnel a beaucoup apporté à mon projet, elle m’a
+                permis de confirmer ma volonté de reconversion tout en m’offrant des apports aussi bien théoriques que
+                pratiques.</p>
+            <h2 class="sub-title">Expérience professionelle</h2>
+            <h2 class="sub-title">formation</h2>
+            <h2 class="sub-title">Compétence</h2>
+        </main>
+        <footer class="footer">
+            <div class="footer-basic">
+                <footer>
+                    <div class="social">
+                        <a href="https://www.linkedin.com/in/yann-demaux-58a325193/"><i class="icon ion-social-linkedin"></i></a>
+                        <!-- <a href="#"><i class="icon ion-social-snapchat"></i></a> -->
+                        <a href="https://twitter.com/YannDemaux"><i class="icon ion-social-twitter"></i></a>
+                        <a href="https://github.com/11Yann09"><i class="icon ion-social-github"></i></a>
+                    </div>
+                </footer>
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+        </footer>
+    </div>
 </body>
+
 </html>
